# ma-dai-shi-io

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.devin/: wiki.json
benches/: evaluation.rs  obfuscation.rs
docs/: main_merged.tex
examples/: find_limit.rs  find_limit_extreme.rs  integration_test.rs
honeypot-demo/: README.md
honeypot-demo/circuits/: Nargo.toml  Prover.toml
honeypot-demo/circuits-medium/: Nargo.toml  Prover.toml
honeypot-demo/circuits-medium/src/: main.nr
honeypot-demo/circuits-minimal/: Nargo.toml  Prover.toml
honeypot-demo/circuits-minimal/src/: main.nr
honeypot-demo/circuits/src/: main.nr
honeypot-demo/contracts/: HoneypotContract.sol  deploy.sh  deploy_simple.sh  foundry.toml
honeypot-demo/contracts/script/: Deploy.s.sol
honeypot-demo/contracts/src/: HoneypotContract.sol  HoneypotVerifier.sol  MockVerifier.sol
honeypot-demo/contracts/test/: HoneypotContract.t.sol
honeypot-demo/scripts/: generate_obf_prog.py  generate_prover_toml.py  setup.sh
honeypot-demo/wasm/: Cargo.toml
honeypot-demo/wasm/src/: lib.rs
honeypot-demo/web/: index.html  package-lock.json  package.json  playwright.config.js  protocol.html  test-e2e.html  vite.config.js
honeypot-demo/web/data/: honeypot_medium.json  obf_prog.json
honeypot-demo/web/src/: app.js  config.js  ethereum.js  noir-prover.js
honeypot-demo/web/tests/: honeypot.spec.js
lean/: FORMALIZATION.md  MaDaiShi.lean  README.md  lake-manifest.json  lakefile.toml
lean/MaDaiShi/: Circuit.lean  ExtendedFrege.lean  LocalIO.lean  Padding.lean  PaddingConstruction.lean  SEquivalence.lean  Security.lean
src/: circuit.rs  hybrid.rs  lib.rs  lio.rs  padding.rs
src/crypto/: fhe.rs  mod.rs  obf.rs  prf.rs  prg.rs  seh.rs
