[package]
name = "ma-dai-shi-io"
version = "0.1.0"
edition = "2021"
description = "Ma-Dai-Shi 2025 Quasi-Linear Indistinguishability Obfuscation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igor53627/ma-dai-shi-io"
readme = "README.md"
keywords = ["cryptography", "obfuscation", "iO", "circuits"]
categories = ["cryptography"]

[dependencies]
rand = "0.8"
sha2 = "0.10"

# Real LWE-based FHE backend (heavyweight, gated behind feature)
# Note: tfhe 1.x has breaking API changes; upgrade requires code migration
tfhe = { version = "0.8", optional = true, default-features = false, features = ["boolean"] }

# Serialization for tfhe ciphertexts in SEH
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# Use stub FHE by default (fast compile, no real crypto)
default = ["stub-fhe"]

# Stub FHE backend (development/testing)
stub-fhe = []

# Real tfhe-based FHE backend; enables LWE-based encryption
tfhe-backend = ["tfhe", "bincode", "serde"]

[[example]]
name = "integration_test"
path = "examples/integration_test.rs"

[[bench]]
name = "obfuscation"
harness = false

[[bench]]
name = "evaluation"
harness = false
